--- a/src/views/links/add.hbs
+++ b/src/views/links/add.hbs
@@ -11,7 +11,7 @@
               <input type="url" name="url" class="form-control" placeholder="URL">
             </div>
             <div class="form-group">
-              <textarea name="Description" rows="2" class="form-control" placeholder="Description"></textarea>
+              <textarea name="description" rows="2" class="form-control" placeholder="Description"></textarea>
             </div>
             <div class="form-group">
               <button class="btn btn-success btn-block">Save</button>
