--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -6,7 +6,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
+      {{#if user}}
+         <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false"> 
           Links
         </a>
@@ -16,18 +17,13 @@
           <a class="dropdown-item" href="/links/add">Add A Link</a>
         </div>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a href="/profile" class="nav-link">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a href="/logout" class="nav-link">Logout</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled">Disabled</a>
-      </li>
+      {{/if}}   
     </ul>
   </div>
 </div>
