Cambios en estructura y BD

--- a/src/views/home/index.hbs
+++ b/src/views/home/index.hbs
@@ -6,7 +6,7 @@
         <em>Store your favorite links</em>
       </h3>
       <a href="/signin" class="btn btn-primary">
-          Let's get Started
+          Get Started
       </a>
      </div>
   </header>
