--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -15,7 +15,7 @@ body {
   width: 100%;
   height: 100%;
   padding-top: 8rem;
-  background: url('/img/background.jpg');
+  background: url('/img/background.webp');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
