--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -12,9 +12,9 @@
           Links
         </a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="/links">All Links</a>
+          <a class="dropdown-item" href="/links">List All</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/links/add">Add A Link</a>
+          <a class="dropdown-item" href="/links/add">Add One</a>
         </div>
       </li>
       <li class="nav-item">
